--- a/numbers.html
+++ b/numbers.html
@@ -38,7 +38,7 @@
         <!-- second nav bar links -->
         <nav class="secondnav">
             <ul>
-                <li><a href="home.html">Default</a></li>
+                <li><a href="home.html">Normal</a></li>
                 <li><a href="cases.html">Cases</a></li>
                 <li><a href="punctuations.html">Punctuations</a></li>
                 <li><a class="aa" href="numbers.html">Numbers</a></li>
@@ -142,10 +142,10 @@
 
           <!-- footer links -->
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#section" id="shortcut-about">About</a></li>
+            <li><a href="tutorial.html">Help</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
 
           <!-- scroll up button -->
