--- a/tutorial.html
+++ b/tutorial.html
@@ -122,10 +122,10 @@
 
           <!-- footer links -->
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Help</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#section" id="shortcut-about">About</a></li>
+            <li><a href="tutorial.html">Help</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
           
           <!-- scroll up button -->
