--- a/account.html
+++ b/account.html
@@ -153,10 +153,10 @@
 
           <!-- footer links -->
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#aboutSection">About</a></li>
+            <li><a href="tutorial.html">Help</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
           
           <!-- scroll up button -->
